QA-885 :: Support for TestRail 6.7 paged object returned by bulk API
Includes support for paged: "attachments" (not implemented in the library at this time), "cases", "milestones", "plans", "projects", "results", "runs", "sections", "tests"